my-apps/development/vert/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vert
  namespace: vert
  labels:
    app.kubernetes.io/name: vert
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: vert
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vert
    spec:
      containers:
        - name: vert
          image: ghcr.io/vert-sh/vert:latest@sha256:3bab22ecb5581a1438d6b966ddfd7d8677ffd348ca84af53e008d5763a585860
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 512Mi
